--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -13,6 +13,7 @@
   &__toggle {
     font-size: 2rem;
     margin-left: 0.5rem;
+    cursor: pointer;
   }
 
   &__avatar {
@@ -34,5 +35,49 @@
     margin: auto;
     font-size: 2.5rem;
     font-weight: bolder;
+  }
+
+  &__toggle-dropdown-container {
+    position: absolute;
+    bottom: -145%;
+    background-color: #00000f;
+    width: 15rem;
+    height: 8rem;
+    border-radius: 0.3rem;
+    color: #ffffff;
+
+    & > ul {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+
+      & > li {
+        list-style-type: none;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        border-radius: 0.3rem;
+        cursor: pointer;
+      }
+
+      & > li:hover,& > li.active {
+        background-color: #ffffff;
+        color: #000000;
+      }
+
+      & > li:first-child::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        width: 80%;
+        border-bottom: 1px solid #ffffff;
+      }
+    }
   }
 }
