--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+<div class="background-image"></div>
 
 <app-navbar></app-navbar>
 <app-sidebar></app-sidebar>
