--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,9 +2,23 @@
   position: relative;
   height: 100vh;
   width: 100%;
+  overflow: auto;
+  padding-left: 10.5rem;
+  padding-top: 7.4rem;
+  padding-bottom: 2rem;
+  padding-right: 2rem;
+  z-index: 10;
+}
+
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-image: url("./../assets/images/background-1.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-left: 8rem;
+  filter: brightness(70%);
 }
