Created add cloth page
- create add cloths page
- create add cloth dialog
- create edit cloth dialog

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <div class="navbar">
+  <button pButton pRipple class="p-button-outlined p-button-raised navbar__btn-back" icon="fas fa-chevron-left" (click)="onBack()"></button>
   <span class="navbar__label">{{ pageName }}</span>
   <span class="navbar__name">{{ username }}</span>
   <img
