--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -11,6 +11,22 @@
   justify-content: flex-end;
   z-index: 99;
 
+  &__btn-back {
+    font-size: large;
+    width: 8rem;
+    height: 3.5rem;
+    position: absolute;
+    top: 0.5rem;
+    left: 8.5rem;
+    background-color: #ffffff;
+    color: #000000;
+
+    &:focus, &:active {
+      outline: none;
+      border:none;
+    }
+  }
+
   &__toggle {
     font-size: 2rem;
     margin-left: 0.5rem;
@@ -46,6 +62,7 @@
     height: 8rem;
     border-radius: 0.3rem;
     color: #ffffff;
+    z-index: 999;
 
     & > ul {
       display: flex;
@@ -67,7 +84,8 @@
         cursor: pointer;
       }
 
-      & > li:hover,& > li.active {
+      & > li:hover,
+      & > li.active {
         background-color: #ffffff;
         color: #000000;
       }
