Created add texture cloth management page
-

--- a/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
+++ b/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
@@ -15,6 +15,7 @@
     [rows]="10"
     [paginator]="true"
     responsiveLayout="scroll"
+    styleClass="p-datatable-lg"
   >
     <ng-template pTemplate="header">
       <tr>
