Created type cloth management page
-

--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
     </li>
     <li routerLink="type-cloth-management" routerLinkActive="active">
       <i class="fas fa-tshirt sidebar__menu--icon"></i
-      ><label class="sidebar__menu--label">จัดการประเภทเสื้อผ้า</label>
+      ><label class="sidebar__menu--label">ประเภทการใช้งานผ้า</label>
     </li>
     <li routerLink="cloth-problem-management" routerLinkActive="active">
       <i class="fas fa-screwdriver sidebar__menu--icon"></i
