Created cloth problem management page
-

--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
     </li>
     <li routerLink="texture-cloth-management" routerLinkActive="active">
       <i class="fas fa-person-booth sidebar__menu--icon"></i
-      ><label class="sidebar__menu--label">จัดการชนิดเนื้อผ้า</label>
+      ><label class="sidebar__menu--label">ชนิดเนื้อผ้า</label>
     </li>
     <li routerLink="type-cloth-management" routerLinkActive="active">
       <i class="fas fa-tshirt sidebar__menu--icon"></i
@@ -24,15 +24,15 @@
     </li>
     <li routerLink="cloth-problem-management" routerLinkActive="active">
       <i class="fas fa-screwdriver sidebar__menu--icon"></i
-      ><label class="sidebar__menu--label">จัดการผ้ามีปัญหา</label>
+      ><label class="sidebar__menu--label">ประเภทผ้ามีปัญหา</label>
     </li>
     <li routerLink="employee-management" routerLinkActive="active">
       <i class="fas fa-users sidebar__menu--icon"></i
-      ><label class="sidebar__menu--label">จัดการข้อมูลพนักงาน</label>
+      ><label class="sidebar__menu--label">ข้อมูลพนักงาน</label>
     </li>
     <li routerLink="customer-management" routerLinkActive="active">
       <i class="fas fa-user-tie sidebar__menu--icon"></i
-      ><label class="sidebar__menu--label">จัดการข้อมูลลูกค้า</label>
+      ><label class="sidebar__menu--label">ข้อมูลลูกค้า</label>
     </li>
   </ul>
 </div>
