Created employee management page
-

--- a/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
+++ b/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
@@ -41,10 +41,15 @@
             pButton
             pRipple
             type="button"
-            icon="fas fa-edit"
-            class="p-button-rounded p-button-raised p-button-warning"
-            routerLink="edit-cloth"
-            [queryParams]="{ id: cloth.id }"
+            icon="fas fa-eye"
+            class="p-button-rounded p-button-raised p-button-help"
+          ></button>
+          <button
+            pButton
+            pRipple
+            type="button"
+            icon="fas fa-paper-plane"
+            class="p-button-rounded p-button-raised p-button-success"
           ></button>
           <button
             pButton
