Texture Clothe Page Connect DB
-

--- a/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
+++ b/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
@@ -26,7 +26,7 @@
     </ng-template>
     <ng-template pTemplate="body" let-cloth>
       <tr>
-        <td>{{ cloth.id }}</td>
+        <td>{{ cloth.key }}</td>
         <td>{{ cloth.name }}</td>
         <td class="container__action">
           <!-- <button
