--- a/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
+++ b/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
@@ -26,7 +26,7 @@
     </ng-template>
     <ng-template pTemplate="body" let-cloth>
       <tr>
-        <td>{{ cloth.id }}</td>
+        <td>{{ cloth.key }}</td>
         <td>{{ cloth.name }}</td>
         <td class="container__action">
           <!-- <button
