--- a/src/app/pages/employee-management/employee-management.component.html
+++ b/src/app/pages/employee-management/employee-management.component.html
@@ -24,16 +24,22 @@
         <th>นามสกุล</th>
         <th>ที่อยู่</th>
         <th>เบอร์โทร</th>
+        <th>อีเมล์</th>
+        <th>สิทธิ์ผู้ใช้</th>
         <th></th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-cloth>
+    <ng-template pTemplate="body" let-employee>
       <tr>
-        <td>{{ cloth.id }}</td>
-        <td>{{ cloth.fname }}</td>
-        <td>{{ cloth.lname }}</td>
-        <td>{{ cloth.address }}</td>
-        <td>{{ cloth.phone }}</td>
+        <td>{{ employee.key }}</td>
+        <td>{{ employee.firstName }}</td>
+        <td>{{ employee.lastName }}</td>
+        <td>{{ employee.address }}</td>
+        <td>{{ employee.phoneNumber }}</td>
+        <td>{{ employee.email }}</td>
+        <td>
+          <p-chip label="{{ employee.role | translate }}"></p-chip>
+        </td>
         <td class="container__action">
           <button
             pButton
@@ -41,8 +47,7 @@
             type="button"
             icon="fas fa-edit"
             class="p-button-rounded p-button-raised p-button-warning"
-            routerLink="edit-cloth"
-            [queryParams]="{ id: cloth.id }"
+            (click)="onVisibleEditEmployee(employee)"
           ></button>
           <button
             pButton
@@ -50,7 +55,7 @@
             type="button"
             icon="fas fa-trash"
             class="p-button-rounded p-button-raised p-button-danger"
-            (click)="onDelete(cloth.id)"
+            (click)="onDelete(employee.id)"
           ></button>
         </td>
       </tr>
@@ -64,6 +69,16 @@
   (onHide)="onResetValue()"
 >
   <div class="container-add-texture">
+    <div class="field">
+      <label for="idCard" class="block">รหัสบัตรประชาชน</label>
+      <input
+        id="idCard"
+        type="text"
+        pInputText
+        [(ngModel)]="idCard"
+        placeholder="โปรดระบุรหัสบัตรประชาชน"
+      />
+    </div>
     <div class="field">
       <label for="fname" class="block">ชื่อ</label>
       <input
@@ -105,6 +120,16 @@
       />
     </div>
     <div class="field">
+      <label for="email" class="block">อีเมล์</label>
+      <input
+        id="email"
+        type="text"
+        pInputText
+        [(ngModel)]="email"
+        placeholder="โปรดระบุอีเมล์"
+      />
+    </div>
+    <div class="field">
       <label for="password" class="block">รหัสผ่าน (เป็นเลขบัตรประชาชน)</label>
       <input
         id="password"
@@ -120,9 +145,21 @@
         id="confirm_password"
         type="text"
         pInputText
-        [(ngModel)]="confirm_password"
+        [(ngModel)]="confirmPassword"
         placeholder="โปรดระบุรหัสผ่านเพื่อยืนยัน"
       />
+    </div>
+    <div class="field">
+      <label for="role" class="block">สิทธิ์ผู้ใช้</label>
+      <p-dropdown
+        [options]="roleOptions"
+        [(ngModel)]="role"
+        placeholder="เลือกสิทธิ์ผู้ใช้"
+        optionLabel="name"
+        optionValue="value"
+        [showClear]="false"
+        [style]="{ width: '30rem' }"
+      ></p-dropdown>
     </div>
     <button
       pButton
@@ -132,6 +169,106 @@
       icon="fas fa-plus"
       style="width: 100%; margin-top: 1rem"
       (click)="onNewEmployee()"
+    ></button>
+  </div>
+</p-dialog>
+
+<p-dialog
+  header="แก้ไขข้อมูลพนักงาน"
+  [(visible)]="editEmployeeVisible"
+  (onHide)="onResetValue()"
+>
+  <div class="container-add-texture">
+    <div class="field">
+      <label for="idCard" class="block">รหัสบัตรประชาชน</label>
+      <input
+        id="idCard"
+        type="text"
+        pInputText
+        [(ngModel)]="idCard"
+        placeholder="โปรดระบุรหัสบัตรประชาชน"
+      />
+    </div>
+    <div class="field">
+      <label for="fname" class="block">ชื่อ</label>
+      <input
+        id="fname"
+        type="text"
+        pInputText
+        [(ngModel)]="fname"
+        placeholder="โปรดระบุชื่อ"
+      />
+    </div>
+    <div class="field">
+      <label for="lname" class="block">นามสกุล</label>
+      <input
+        id="lname"
+        type="text"
+        pInputText
+        [(ngModel)]="lname"
+        placeholder="โปรดระบุนามสกุล"
+      />
+    </div>
+    <div class="field">
+      <label for="phone" class="block">เบอร์มือถือ</label>
+      <input
+        id="phone"
+        type="text"
+        pInputText
+        [(ngModel)]="phone"
+        placeholder="โปรดระบุเบอร์มือถือ"
+      />
+    </div>
+    <div class="field">
+      <label for="address" class="block">ที่อยู่</label>
+      <input
+        id="address"
+        type="text"
+        pInputText
+        [(ngModel)]="address"
+        placeholder="โปรดระบุที่อยู่"
+      />
+    </div>
+    <div class="field">
+      <label for="email" class="block">อีเมล์</label>
+      <input
+        id="email"
+        type="text"
+        pInputText
+        [(ngModel)]="email"
+        placeholder="โปรดระบุอีเมล์"
+      />
+    </div>
+    <div class="field">
+      <label for="password" class="block">รหัสผ่าน (เป็นเลขบัตรประชาชน)</label>
+      <input
+        id="password"
+        type="text"
+        pInputText
+        [(ngModel)]="password"
+        placeholder="โปรดระบุรหัสผ่าน"
+      />
+    </div>
+    <div class="field">
+      <label for="role" class="block">สิทธิ์ผู้ใช้</label>
+      <p-dropdown
+        [options]="roleOptions"
+        [(ngModel)]="role"
+        placeholder="เลือกสิทธิ์ผู้ใช้"
+        optionLabel="name"
+        optionValue="value"
+        [showClear]="false"
+        [style]="{ width: '30rem' }"
+      ></p-dropdown>
+    </div>
+    <button
+      pButton
+      pRipple
+      class="p-button-success p-button-raised"
+      label="แก้ไข"
+      icon="fas fa-plus"
+      style="width: 100%; margin-top: 1rem"
+      (click)="onEditEmployee()"
     ></button>
   </div>
 </p-dialog>
