--- a/src/app/pages/customer-management/customer-management.component.html
+++ b/src/app/pages/customer-management/customer-management.component.html
@@ -24,18 +24,22 @@
         <th>นามสกุล</th>
         <th>ที่อยู่</th>
         <th>เบอร์โทร</th>
-        <th>Line ID</th>
+        <th>อีเมล</th>
+        <th>เลขบัตรประชาชน</th>
+        <th>@Line ID</th>
         <th></th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-cloth>
       <tr>
-        <td>{{ cloth.id }}</td>
-        <td>{{ cloth.fname }}</td>
-        <td>{{ cloth.lname }}</td>
+        <td>{{ cloth.key }}</td>
+        <td>{{ cloth.firstName }}</td>
+        <td>{{ cloth.lastName }}</td>
         <td>{{ cloth.address }}</td>
-        <td>{{ cloth.phone }}</td>
-        <td>{{ cloth.line_id }}</td>
+        <td>{{ cloth.phoneNumber }}</td>
+        <td>{{ cloth.email }}</td>
+        <td>{{ cloth.idCard }}</td>
+        <td>{{ !!cloth.lineUserId ? cloth.lineUserId : "ไม่ได้ระบุ" }}</td>
         <td class="container__action">
           <button
             pButton
@@ -43,8 +47,7 @@
             type="button"
             icon="fas fa-edit"
             class="p-button-rounded p-button-raised p-button-warning"
-            routerLink="edit-cloth"
-            [queryParams]="{ id: cloth.id }"
+            (click)="onVisibleEditCustomer(cloth)"
           ></button>
           <button
             pButton
@@ -107,22 +110,22 @@
       />
     </div>
     <div class="field">
-      <label for="line_id" class="block">@Lind ID</label>
+      <label for="email" class="block">อีเมล</label>
       <input
-        id="line_id"
-        type="text"
+        id="email"
+        type="email"
         pInputText
-        [(ngModel)]="line_id"
+        [(ngModel)]="email"
         placeholder="โปรดระบุไลน์ไอดี"
       />
     </div>
     <div class="field">
-      <label for="id_card_number" class="block">เลขบัตรประชาชน</label>
+      <label for="idCard" class="block">เลขบัตรประชาชน</label>
       <input
-        id="id_card_number"
+        id="idCard"
         type="text"
         pInputText
-        [(ngModel)]="id_card_number"
+        [(ngModel)]="idCard"
         placeholder="โปรดระบุเลขบัตรประชาชน"
       />
     </div>
@@ -134,6 +137,94 @@
       icon="fas fa-plus"
       style="width: 100%; margin-top: 1rem"
       (click)="onNewCustomer()"
+    ></button>
+  </div>
+</p-dialog>
+
+<p-dialog
+  header="แก้ไขข้อมูลลูกค้าใหม่"
+  [(visible)]="editCustomerVisible"
+  (onHide)="onResetValue()"
+>
+  <div class="container-add-texture">
+    <div class="field">
+      <label for="fname" class="block">ชื่อ</label>
+      <input
+        id="fname"
+        type="text"
+        pInputText
+        [(ngModel)]="fname"
+        placeholder="โปรดระบุชื่อ"
+      />
+    </div>
+    <div class="field">
+      <label for="lname" class="block">นามสกุล</label>
+      <input
+        id="lname"
+        type="text"
+        pInputText
+        [(ngModel)]="lname"
+        placeholder="โปรดระบุนามสกุล"
+      />
+    </div>
+    <div class="field">
+      <label for="phone" class="block">เบอร์มือถือ</label>
+      <input
+        id="phone"
+        type="text"
+        pInputText
+        [(ngModel)]="phone"
+        placeholder="โปรดระบุเบอร์มือถือ"
+      />
+    </div>
+    <div class="field">
+      <label for="address" class="block">ที่อยู่</label>
+      <input
+        id="address"
+        type="text"
+        pInputText
+        [(ngModel)]="address"
+        placeholder="โปรดระบุที่อยู่"
+      />
+    </div>
+    <div class="field">
+      <label for="email" class="block">อีเมล</label>
+      <input
+        id="email"
+        type="email"
+        pInputText
+        [(ngModel)]="email"
+        placeholder="โปรดระบุไลน์ไอดี"
+      />
+    </div>
+    <div class="field">
+      <label for="idCard" class="block">เลขบัตรประชาชน</label>
+      <input
+        id="idCard"
+        type="text"
+        pInputText
+        [(ngModel)]="idCard"
+        placeholder="โปรดระบุเลขบัตรประชาชน"
+      />
+    </div>
+    <div class="field">
+      <label for="line_id" class="block">@Line ID</label>
+      <input
+        id="line_id"
+        type="text"
+        pInputText
+        [(ngModel)]="lineId"
+        placeholder="โปรดระบุไลน์ไอดี"
+      />
+    </div>
+    <button
+      pButton
+      pRipple
+      class="p-button-success p-button-raised"
+      label="ยืนยัน"
+      icon="fas fa-plus"
+      style="width: 100%; margin-top: 1rem"
+      (click)="onEditCustomer()"
     ></button>
   </div>
 </p-dialog>
