Modify Clothe management

--- a/src/app/features/add-cloth/add-cloth.component.html
+++ b/src/app/features/add-cloth/add-cloth.component.html
@@ -6,6 +6,7 @@
       [(ngModel)]="typeSelected"
       optionLabel="name"
       optionValue="value"
+      (ngModelChange)="onChangeType(typeSelected)"
     ></p-selectButton>
   </div>
   <div class="field">
@@ -17,7 +18,7 @@
       optionValue="value"
     ></p-selectButton>
   </div>
-  <div class="field">
+  <div *ngIf="typeSelected === 'ผ้าพิเศษ'" class="field">
     <label class="block">เลือกผ้าชนิดพิเศษ</label>
     <p-selectButton
       [options]="typeSpecialOptions"
@@ -52,6 +53,14 @@
       decrementButtonIcon="pi pi-minus"
     >
     </p-inputNumber>
+  </div>
+  <div class="field-checkbox flex justify-content-end">
+    <p-checkbox
+      [(ngModel)]="isOutProcess"
+      [binary]="true"
+      inputId="binary"
+    ></p-checkbox>
+    <label for="binary">ไม่ต้องเข้ากระบวนการซัก</label>
   </div>
   <button
     pButton
