--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -3,7 +3,7 @@
   top: 0;
   width: 100%;
   height: 4.5rem;
-  background-color: #eadede;
+  background-color: #FFECE3;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 0.2rem 1rem;
   display: flex;
