--- a/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
+++ b/src/app/pages/cloth-problem-management/cloth-problem-management.component.html
@@ -39,6 +39,7 @@
             [queryParams]="{ id: cloth.id }"
           ></button> -->
           <button
+            *ngIf="!problemClothes.includes(cloth.name)"
             pButton
             pRipple
             type="button"
