--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="card shadow-7">
-  <h1 class="card__label-header">Login</h1>
+  <h1 class="card__label-header">เข้าสู่ระบบ</h1>
   <div class="p-field">
-    <label for="username">Username</label>
+    <label for="username">ชื่อผู้ใช้</label>
     <input
       id="username"
       type="text"
@@ -12,7 +12,7 @@
     />
   </div>
   <div class="p-field">
-    <label for="password">Password</label>
+    <label for="password">รหัสผ่าน</label>
     <input
       id="password"
       type="password"
@@ -24,7 +24,7 @@
   </div>
   <button
     pButton
-    label="Login"
+    label="เข้าสู่ระบบ"
     class="p-button-success p-button-lg card__btn"
     (click)="onLogin()"
   ></button>
