created delete order function
-

--- a/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
+++ b/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
@@ -73,3 +73,9 @@
     </ng-template>
   </p-table>
 </div>
+<p-confirmDialog
+  header="Warning"
+  icon="pi pi-exclamation-triangle"
+  [style]="{ width: '30vw' }"
+  [baseZIndex]="10000"
+></p-confirmDialog>
