--- a/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
+++ b/src/app/pages/cloth-management/cloth-table/cloth-table.component.html
@@ -52,6 +52,7 @@
             type="button"
             icon="fas fa-eye"
             class="p-button-rounded p-button-raised p-button-help"
+            (click)="onViewDetail(cloth.id)"
           ></button>
           <button
             pButton
