--- a/src/app/pages/cloth-management/confirm-order/confirm-order.component.html
+++ b/src/app/pages/cloth-management/confirm-order/confirm-order.component.html
@@ -73,7 +73,7 @@
         pInputText
         placeholder="รหัสพนักงาน"
         [disabled]="true"
-        [value]="orderDetail.employee_id"
+        [value]="orderDetail.employee_key"
       />
     </div>
   </div>
