--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -3,7 +3,11 @@
   top: 0;
   width: 100%;
   height: 4.5rem;
-  background-color: #FFECE3;
+  // background-color: #FFECE3;
+  background: url("./../../../../assets/images/background-3.jpg");
+  // background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 0.2rem 1rem;
   display: flex;
@@ -21,9 +25,10 @@
     background-color: #ffffff;
     color: #000000;
 
-    &:focus, &:active {
+    &:focus,
+    &:active {
       outline: none;
-      border:none;
+      border: none;
     }
   }
 
