disable and undeisable
-

--- a/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
+++ b/src/app/pages/texture-cloth-management/texture-cloth-management.component.html
@@ -43,9 +43,9 @@
             pButton
             pRipple
             type="button"
-            icon="fas fa-trash"
+            [icon]="'fas ' + (cloth.isDisable ? 'fa-undo' : 'fa-eye-slash')"
             class="p-button-rounded p-button-raised p-button-danger"
-            (click)="onDelete(cloth.id)"
+            (click)="onDelete(cloth.id, cloth.isDisable, cloth.name)"
           ></button>
         </td>
       </tr>
